@@ -1,9 +1,8 @@
-
 \header {
     texidoc = "Lyrics are not lowered despite the presence of an octavation 8."
 }
 
-\version "2.3.4"
+\version "2.3.10"
 \paper {
     \context {
 	\Staff
@@ -12,10 +11,9 @@
     \context {
 	\Lyrics
 	minimumVerticalExtent = ##f
-	}
+    }
     raggedright = ##t
 }
-<<
-\relative c' { \clef "G_8" c c c c }
-\newlyrics { bla bla bla bla }
->>
+
+\relative { \clef "G_8" c c c c }
+\addlyrics { bla bla bla bla }
