@@ -5,14 +5,14 @@
 	d,2 d c4 bes a2 \break
 	c2 c d4 f g2
     }
-    \newlyrics {
+    \addlyrics {
 	My first Li -- ly song,
 	Not much can go wrong!
     }
 >>
 
 %% Optional helper for automatic updating by convert-ly.  May be omitted.
-\version "2.3.4"
+\version "2.3.10"
     
 %% Optional helper for quick click and edit mode.  May be omitted
 #(ly:set-point-and-click 'line-column)
