@@ -1,10 +1,15 @@
+2004-08-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* scripts/lilypond-book.py (Lilypond_file_snippet.ly): reinstate
+	renameinput.
+
 2004-08-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/lookup.cc (round_filled_box): remove warnings about blot
 	diameter.
 
-	* scm/paper.scm (paper-set-staff-size): tune up linethickness by
-	10% for  20pt staffs. Leave 16.5 untouched.
+	* scm/paper.scm (paper-set-staff-size): make linethickness more
+	easily tunable.
 
 	* lily/parser.yy (new_lyrics): \addlyrics -> \oldaddlyrics,
 	\newlyrics -> \addlyrics
